add spec to Product

--- a/admin/src/main/resources/webapp/product-upload.html
+++ b/admin/src/main/resources/webapp/product-upload.html
@@ -38,6 +38,8 @@
         <div></div>
         <input id="introduction" placeholder="introduction">
         <div></div>
+        <input id="spec" placeholder="spec">
+        <div></div>
         <input type="number" id="priority" placeholder="priority">
         <div></div>
         <input id="tag" placeholder="tag">
@@ -140,6 +142,7 @@
             price: document.getElementById("price").value,
             originalPrice: document.getElementById("originalPrice").value,
             introduction: document.getElementById("introduction").value,
+            spec : document.getElementById("spec").value,
             details: details.getHTML(),
             priority: document.getElementById("priority").value,
             tag: document.getElementById("tag").value,
