Update product redirect path. Update product & products UI.

--- a/admin/src/main/resources/webapp/product-upload.html
+++ b/admin/src/main/resources/webapp/product-upload.html
@@ -95,7 +95,7 @@
             for (let i =0; i< len ; i++) {
                 let file = this.files[i];
                 if (file.size > 250000) {
-                    alert("not allow over 50000");
+                    alert("not allow over 250KB");
                 }
             }
 
