--- a/admin/src/main/resources/webapp/dashboard.html
+++ b/admin/src/main/resources/webapp/dashboard.html
@@ -80,12 +80,13 @@
             <table class="table">
                 <thead><tr>
                     <th>No.</th>
-                    <th>訂單序號
-                        <!--<button onclick="sortTableByOrderDateTimeDS()">高</button>-->
-                        <!--<button onclick="sortTableByOrderDateTimeAS()">低</button></th>-->
+                    <th>訂單序號</th>
+                    <th>時間
+                        <button onclick="sortTableByOrderDateTimeDS()">高</button>
+                        <button onclick="sortTableByOrderDateTimeAS()">低</button></th>
                     <th>項目</th>
                     <th >
-                        <span onclick="sortTableByPriceDS()">⬆️</span> 總額<span onclick="sortTableByPriceDS()">⬇️</span></th>
+                        <span onclick="sortTableByPriceAS()">⬆️</span> 總額<span onclick="sortTableByPriceDS()">⬇️</span></th>
                     <th>購買人</th>
                     <th>購買人電話</th>
                     <th>收件人</th>
